added payload examples in json files and updated swagger
